# GitQuery

./: .gitignore  BUILD  BUILD.bazel  CHANGELOG.md  LICENSE.txt  README.md  WORKSPACE  build.gradle.kts  gitquery  gradle.properties  gradlew  install  publish  settings.gradle.kts
.circleci/: config.yml
.github/workflows/: bazel.yml  build_samples.yml  gradle.yml  samples_gradle.yml
Aliases/: gitquery
Formula/: git-query.rb
bazel_support/: constants.bzl  repositories.bzl
build-support/hooks/: pre-commit  pre-commit-core
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: Libs.kt  utlils.kt
cli/: build.gradle.kts  gradle.properties
core/: BUILD  build.gradle.kts  gradle.properties
gitquery-out/: README.md
gitquery-out/definitions/: user.proto
gradle-plugin/: build.gradle.kts  gradle.properties
gradle-plugin/src/main/kotlin/com/tinder/gitquery/: GitQueryDefaultExtension.kt  GitQueryDefaultTask.kt  GitQueryExtension.kt  GitQueryInitExtension.kt  GitQueryInitTask.kt  GitQueryInitializeExtension.kt  GitQueryInitializeTask.kt  GitQueryPlugin.kt  GitQuerySyncExtension.kt  GitQuerySyncTask.kt  GitQueryTask.kt
gradle-plugin/src/test/kotlin/com/tinder/gitquery/: GitQueryInitTaskTest.kt  (+3 more)
samples/: sample-generate.yml  sample1.yaml  sample1.yml  sample2-generate-flat.yml  sample2-generate-nested.yml  sample2.yaml
samples/kotlin-code-gen/: build.gradle.kts  gitquery.yml
samples/protobuf-sync-code-gen/: README.md  build.gradle.kts  gitquery.yml
samples/protobuf-sync-groovy-dsl/: README.md  build.gradle  gitquery.yml  settings.gradle
(+26 files in other folders)
