load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_binary")

java_library(
    name = "clikt",
    exports = [
        "@maven//:com_github_ajalt_clikt_clikt_jvm",
    ],
)

kt_jvm_binary(
    name = "GitQuery",
    deps = [
        "//core:core",
        ":clikt",
    ],
    visibility = ["//visibility:public"],
    main_class = "com.tinder.gitquery.cli.GitQueryCliKt",
    srcs = [
        "cli/src/main/kotlin/com/tinder/gitquery/cli/GitQueryCli.kt",
    ],
)

load("@io_bazel_rules_kotlin//kotlin:core.bzl", "define_kt_toolchain")

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.8",  # "1.1", "1.2", "1.3", "1.4", "1.5" "1.6", "1.7", "1.8", or "1.9"
    jvm_target = "11", # "1.6", "1.8", "9", "10", "11", "12", "13", "15", "16", "17", "18", "19", "20" or "21"
    language_version = "1.8",  # "1.1", "1.2", "1.3", "1.4", "1.5" "1.6", "1.7", "1.8", or "1.9"
)